src/main/graphql/Cal/labledexpr.g4
grammar labledexpr;
import syntax;
prog: stat+;
stat: expr NEWLINE                #printExpr
	|ID '=' expr NEWLINE          #assign
	|NEWLINE                      #blank
	;
expr: expr op=('*'|'/') expr      #MulDiv
	| expr op=('+'|'-') expr      #AddSub
	| INT                         #int
	| ID                          #id
	|'('expr')'                   #parens
	;
